--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
     id "io.spring.dependency-management" version "1.0.9.RELEASE"
     id "groovy"
     id "checkstyle"
-    id "com.github.spotbugs" version "3.0.0"
+//    id "com.github.spotbugs" version "3.0.0"
     id "pmd"
     id "net.ltgt.errorprone" version "1.1.1"
     id "com.gorylenko.gradle-git-properties" version "2.2.0"
@@ -28,7 +28,7 @@ sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
-    gradleVersion = "6.0.1"
+    gradleVersion = "6.5.1"
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -83,19 +83,19 @@ checkstyle {
     sourceSets = [project.sourceSets.main]
 }
 
-spotbugs {
-    toolVersion = "4.0.0-beta4"
-    ignoreFailures = true
-    effort = "max"
-    spotbugsTest.enabled = false
-}
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
-    reports {
-        xml.enabled = false
-        html.enabled = true
-        html.stylesheet = resources.text.fromArchiveEntry(configurations.spotbugsStylesheets, "color.xsl")
-    }
-}
+//spotbugs {
+//    toolVersion = "4.0.0-beta4"
+//    ignoreFailures = true
+//    effort = "max"
+//    spotbugsTest.enabled = false
+//}
+//tasks.withType(com.github.spotbugs.SpotBugsTask) {
+//    reports {
+//        xml.enabled = false
+//        html.enabled = true
+//        html.stylesheet = resources.text.fromArchiveEntry(configurations.spotbugsStylesheets, "color.xsl")
+//    }
+//}
 
 pmd {
     toolVersion = "6.20.0"
@@ -203,14 +203,14 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for SpotBugs
-    compileOnly("com.github.spotbugs:spotbugs:${spotbugsVersion}") {
-        exclude group: "pull-parser", module: "pull-parser"
-    }
-    compileOnly("net.jcip:jcip-annotations:1.0")
+//    compileOnly("com.github.spotbugs:spotbugs:${spotbugsVersion}") {
+//        exclude group: "pull-parser", module: "pull-parser"
+//    }
+//    compileOnly("net.jcip:jcip-annotations:1.0")
     compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
-    testImplementation("com.google.code.findbugs:jsr305:3.0.2")
-    spotbugsStylesheets("com.github.spotbugs:spotbugs:${spotbugsVersion}")
-    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1")
+//    testImplementation("com.google.code.findbugs:jsr305:3.0.2")
+//    spotbugsStylesheets("com.github.spotbugs:spotbugs:${spotbugsVersion}")
+//    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1")
 }
 
 def jvmArgsForTask = [
