#135 server.shutdown=graceful の設定と Graceful shutdown の動作検証用の Controller クラスを追加しました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ management.endpoints.web.exposure.include=health,info,loggers,prometheus
 management.metrics.tags.application=lending
 management.endpoint.health.show-details=always
 
+server.shutdown=graceful
+
 #spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/ksbylending
 spring.datasource.hikari.username=ksbylending_user
