--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 management.endpoints.web.exposure.include=health,info,loggers,prometheus
 management.metrics.tags.application=lending
 management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.group.liveness.include=livenessStateProbeIndicator,cacheCheck
+management.endpoint.health.group.readiness.include=readinessStateProbeIndicator,cacheCheck
 
 server.shutdown=graceful
 
