#135 Docker コンテナで使用している image のうち rabbitmq・haproxy・rabbitmq_exporter を最新バージョンに上げました

--- a/docker/rabbitmq/Dockerfile
+++ b/docker/rabbitmq/Dockerfile
@@ -1,3 +1,5 @@
 ARG RABBITMQ_VERSION
 FROM rabbitmq:${RABBITMQ_VERSION}-alpine
 RUN apk add --no-cache tzdata
+COPY --chown=rabbitmq:rabbitmq .erlang.cookie /tmp/
+RUN chmod 600 /tmp/.erlang.cookie
