--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -235,20 +235,38 @@ services:
     hostname: rabbitmq1
     environment:
       - TZ=Asia/Tokyo
-      - RABBITMQ_ERLANG_COOKIE
       - RABBITMQ_DEFAULT_USER
       - RABBITMQ_DEFAULT_PASS
       - RABBITMQ_DEFAULT_VHOST
+    command:
+      - /bin/sh
+      - -c
+      - |
+        cp -p /tmp/.erlang.cookie /var/lib/rabbitmq/
+        ls -al /var/lib/rabbitmq/
+        rabbitmq-server
+  rabbitmq-create-user:
+    image: rabbitmq:${RABBITMQ_VERSION}-alpine-custom
+    container_name: rabbitmq-create-user
+    hostname: rabbitmq-create-user
+    environment:
+      - TZ=Asia/Tokyo
+      - RABBITMQ_DEFAULT_USER
+      - RABBITMQ_DEFAULT_PASS
+    volumes:
+      - ./docker/rabbitmq/create-user-entrypoint.sh:/usr/local/bin/create-user-entrypoint.sh
+    entrypoint: /usr/local/bin/create-user-entrypoint.sh
+    depends_on:
+      - rabbitmq1
   rabbitmq2:
     image: rabbitmq:${RABBITMQ_VERSION}-alpine-custom
     container_name: rabbitmq2
     hostname: rabbitmq2
     environment:
       - TZ=Asia/Tokyo
-      - RABBITMQ_ERLANG_COOKIE
     volumes:
       - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
-    entrypoint: /bin/sh -c /usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
     depends_on:
       - rabbitmq1
   rabbitmq3:
@@ -257,7 +275,6 @@ services:
     hostname: rabbitmq3
     environment:
       - TZ=Asia/Tokyo
-      - RABBITMQ_ERLANG_COOKIE
     volumes:
       - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
     entrypoint: /usr/local/bin/cluster-entrypoint.sh
@@ -265,7 +282,7 @@ services:
       - rabbitmq1
   # http://localhost:1936/haproxy?stats
   haproxy:
-    image: haproxy:2.1.2-alpine
+    image: haproxy:2.3.2-alpine
     container_name: haproxy
     ports:
       - "1936:1936"
