#135 Grafana の RabbitMQ 用の Dashboard を RabbitMQ Monitoring → RabbitMQ-Overview に切り替えました

--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -44,9 +44,12 @@ scrape_configs:
   static_configs:
   - targets: ['redis_exporter:9121']
 
-- job_name: 'rabbitmq_exporter'
+- job_name: 'rabbitmq'
   static_configs:
-    - targets: ['rabbitmq_exporter:9419']
+    - targets:
+        - rabbitmq1:15692
+        - rabbitmq2:15692
+        - rabbitmq3:15692
 
 - job_name: 'postgres_exporter'
   static_configs:
