--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 host.ip.address=192.168.3.6
 doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
-management.endpoints.web.exposure.include=health,info,loggers,prometheus
+management.endpoints.web.exposure.include=health,info,loggers,prometheus,metrics
 management.metrics.tags.application=lending
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.group.liveness.include=livenessStateProbeIndicator,cacheCheck
 management.endpoint.health.group.readiness.include=readinessStateProbeIndicator,cacheCheck
+server.tomcat.mbeanregistry.enabled=true
 
 server.shutdown=graceful
 
