--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
         maven { url "https://repo.spring.io/release/" }
         gradlePluginPortal()
     }
+    dependencies {
+        // for doma-codegen-plugin
+        classpath "org.postgresql:postgresql:42.2.14"
+    }
 }
 
 plugins {
@@ -22,6 +26,7 @@ plugins {
     id "pmd"
     id "net.ltgt.errorprone" version "1.2.1"
     id "com.gorylenko.gradle-git-properties" version "2.2.3"
+    id "org.seasar.doma.codegen" version "1.2.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -44,7 +49,7 @@ tasks.named("compileTestJava").configure {
 // for Doma 2
 // Copy the resources referred by the Doma annotation processors to
 // the destinationDir of the compileJava task
-task copyDomaResources(type: Sync)  {
+task copyDomaResources(type: Sync) {
     from sourceSets.main.resources.srcDirs
     into compileJava.destinationDir
     include "doma.compile.config"
@@ -70,9 +75,6 @@ configurations {
     // annotationProcessor と testAnnotationProcessor、compileOnly と testCompileOnly を併記不要にする
     testAnnotationProcessor.extendsFrom annotationProcessor
     testImplementation.extendsFrom compileOnly
-
-    // for Doma 2
-    domaGenRuntime
 
     // for SpotBugs
     spotbugsStylesheets { transitive = false }
@@ -129,7 +131,7 @@ dependencyManagement {
 dependencies {
     def jdbcDriver = "org.postgresql:postgresql:42.2.14"
     def spockVersion = "1.3-groovy-2.5"
-    def domaVersion = "2.26.0"
+    def domaVersion = "2.44.3"
     def lombokVersion = "1.18.12"
     def errorproneVersion = "2.4.0"
     def powermockVersion = "2.0.7"
@@ -186,10 +188,9 @@ dependencies {
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
 
     // for Doma
-    annotationProcessor("org.seasar.doma:doma:${domaVersion}")
-    implementation("org.seasar.doma:doma:${domaVersion}")
-    domaGenRuntime("org.seasar.doma:doma-gen:${domaVersion}")
-    domaGenRuntime("${jdbcDriver}")
+    implementation("org.seasar.doma:doma-core:${domaVersion}")
+    implementation("org.seasar.doma:doma-slf4j:${domaVersion}")
+    annotationProcessor("org.seasar.doma:doma-processor:${domaVersion}")
 
     // for JUnit 5
     // junit-jupiter で junit-jupiter-api, junit-jupiter-params, junit-jupiter-engine の３つが依存関係に追加される
@@ -276,68 +277,130 @@ test {
     }
 }
 
-// for Doma-Gen
-task domaGen {
+// for doma-codegen-plugin
+// まず変更が必要なもの
+def rootPackageName = "ksbysample.webapp.lending"
+def rootPackagePath = "src/main/java/ksbysample/webapp/lending"
+def dbUrl = "jdbc:postgresql://localhost/ksbylending"
+def dbUser = "ksbylending_user"
+def dbPassword = "xxxxxxxx"
+def dbTableNamePattern = ".*"
+// おそらく変更不要なもの
+def packageEntityPath = rootPackagePath + "/entity"
+def packageDaoPath = rootPackagePath + "/dao"
+def importOfComponentAndAutowiredDomaConfig = "${rootPackageName}.util.doma.ComponentAndAutowiredDomaConfig"
+def workPath = "work"
+def workEntityPath = "${workPath}/entity"
+def workDaoPath = "${workPath}/dao"
+task domaGen(group: "doma code generation") {
+    // このタスク自体は何もしない。実行する時の起点用タスクとして作成している。
+}
+task beforeDomaCodeGen {
     doLast {
-        // まず変更が必要なもの
-        def rootPackageName = "ksbysample.webapp.lending"
-        def daoPackagePath = "src/main/java/ksbysample/webapp/lending/dao"
-        def dbUrl = "jdbc:postgresql://localhost/ksbylending"
-        def dbUser = "ksbylending_user"
-        def dbPassword = "xxxxxxxx"
-        def tableNamePattern = ".*"
-        // おそらく変更不要なもの
-        def importOfComponentAndAutowiredDomaConfig = "${rootPackageName}.util.doma.ComponentAndAutowiredDomaConfig"
-        def workDirPath = "work"
-        def workDaoDirPath = "${workDirPath}/dao"
-
         // 作業用ディレクトリを削除する
-        clearDir("${workDirPath}")
+        delete "${workPath}"
 
-        // 現在の Dao インターフェースのバックアップを取得する
+        // 現在の dao, entity パッケージのバックアップを取得する
         copy() {
-            from "${daoPackagePath}"
-            into "${workDaoDirPath}/org"
+            from "${packageDaoPath}"
+            into "${workDaoPath}/org"
+        }
+        copy() {
+            from "${packageEntityPath}"
+            into "${workEntityPath}/org"
         }
 
-        // Dao インターフェース、Entity クラスを生成する
-        ant.taskdef(resource: "domagentask.properties",
-                classpath: configurations.domaGenRuntime.asPath)
-        ant.gen(url: "${dbUrl}", user: "${dbUser}", password: "${dbPassword}", tableNamePattern: "${tableNamePattern}") {
-            entityConfig(packageName: "${rootPackageName}.entity", useListener: false)
-            daoConfig(packageName: "${rootPackageName}.dao")
-            sqlConfig()
+        // dao, entity パッケージを削除する
+        delete "${packageDaoPath}"
+        delete "${packageEntityPath}"
+    }
+}
+domaCodeGen {
+    db {
+        url = "${dbUrl}"
+        user = "${dbUser}"
+        password = "${dbPassword}"
+        tableNamePattern = "${dbTableNamePattern}"
+        ignoredTableNamePattern = "flyway_schema_history|SPRING_SESSION.*"
+        entity {
+            packageName = "${rootPackageName}.entity"
+            useListener = false
+            useMappedSuperclass = false
+        }
+        dao {
+            packageName = "${rootPackageName}.dao"
+        }
+    }
+}
+task afterDomaCodeGen {
+    doLast {
+        // 生成された Entity クラスを作業用ディレクトリにコピーし、
+        // @SuppressWarnings({"PMD.TooManyFields"}) アノテーションを付加する
+        copy() {
+            from "${packageEntityPath}"
+            into "${workEntityPath}/replace"
+            filter {
+                line ->
+                    line.replaceAll('@Entity', '@SuppressWarnings({"PMD.TooManyFields"})\n@Entity')
+            }
+        }
+
+        // 生成された Dao インターフェースからバックアップにあるクラスを削除する
+        // ※生成済の Dao インターフェースを再生成したい場合には事前に削除すること！
+        for (workDaoFile in new File("${workDaoPath}/org").listFiles()) {
+            def packageDaoFile = new File("${packageDaoPath}/${workDaoFile.name}")
+            if (packageDaoFile.exists()) {
+                packageDaoFile.delete()
+            }
         }
 
         // 生成された Dao インターフェースを作業用ディレクトリにコピーし、
-        // @ComponentAndAutowiredDomaConfig アノテーションを付加する
+        // @ComponentAndAutowiredDomaConfig アノテーションを付加し、
+        // Javadoc の @param に説明文を追加する
         copy() {
-            from "${daoPackagePath}"
-            into "${workDaoDirPath}/replace"
+            from "${packageDaoPath}"
+            into "${workDaoPath}/replace"
             filter {
                 line ->
-                    line.replaceAll("import org.seasar.doma.Dao;", "import ${importOfComponentAndAutowiredDomaConfig};\nimport org.seasar.doma.Dao;")
-                            .replaceAll("@Dao", "@Dao\n@ComponentAndAutowiredDomaConfig")
+                    line.replaceAll('import org.seasar.doma.Dao;', "import ${importOfComponentAndAutowiredDomaConfig};\nimport org.seasar.doma.Dao;")
+                            .replaceAll('@Dao', '@Dao\n@ComponentAndAutowiredDomaConfig')
+                            .replaceAll('@param (\\S+)$', '@param $1 $1')
             }
+        }
+
+        // 元々 dao, entity パッケージ内にあったファイルを元に戻す
+        copy() {
+            from "${workDaoPath}/org"
+            into "${packageDaoPath}"
+        }
+        copy() {
+            from "${workEntityPath}/org"
+            into "${packageEntityPath}"
         }
 
         // @ComponentAndAutowiredDomaConfig アノテーションを付加した Dao インターフェースを
         // dao パッケージへ戻す
         copy() {
-            from "${workDaoDirPath}/replace"
-            into "${daoPackagePath}"
+            from "${workDaoPath}/replace"
+            into "${packageDaoPath}"
         }
 
-        // 元々 dao パッケージ内にあったファイルを元に戻す
+        // @SuppressWarnings({"PMD.TooManyFields"}) アノテーションを付加した Entity クラスを
+        // entity パッケージへ戻す
         copy() {
-            from "${workDaoDirPath}/org"
-            into "${daoPackagePath}"
+            from "${workEntityPath}/replace"
+            into "${packageEntityPath}"
         }
 
         // 作業用ディレクトリを削除する
-        delete "${workDirPath}"
+        delete "${workPath}"
     }
 }
+// beforeDomaCodeGen --> domaCodeGenDbEntity --> domaCodeGenDbDao --> domaGen --> afterDomaCodeGen
+domaCodeGenDbEntity.dependsOn beforeDomaCodeGen
+domaCodeGenDbDao.dependsOn domaCodeGenDbEntity
+domaGen.dependsOn domaCodeGenDbDao
+domaGen.finalizedBy afterDomaCodeGen
 
 task printClassWhatNotMakeTest {
     doLast {
