--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
     id "checkstyle"
     id "com.github.spotbugs" version "4.5.0"
     id "pmd"
-    id "net.ltgt.errorprone" version "1.2.1"
+    id "net.ltgt.errorprone" version "1.3.0"
     id "com.gorylenko.gradle-git-properties" version "2.2.4"
     id "org.seasar.doma.codegen" version "1.2.1"
 }
@@ -40,7 +40,10 @@ wrapper {
 [compileJava, compileTestGroovy, compileTestJava]*.options*.encoding = "UTF-8"
 [compileJava, compileTestGroovy, compileTestJava]*.options*.compilerArgs = ["-Xlint:all,-options,-processing,-path"]
 tasks.withType(JavaCompile).configureEach {
-    options.errorprone.disableWarningsInGeneratedCode = true
+    options.errorprone {
+        disableWarningsInGeneratedCode = true
+        disable("SameNameButDifferent")
+    }
 }
 tasks.named("compileTestJava").configure {
     options.errorprone.enabled = false
@@ -133,7 +136,7 @@ dependencies {
     def spockVersion = "1.3-groovy-2.5"
     def domaVersion = "2.45.0"
     def lombokVersion = "1.18.18"
-    def errorproneVersion = "2.4.0"
+    def errorproneVersion = "2.5.1"
     def powermockVersion = "2.0.9"
     def spotbugsVersion = "4.1.1"
 
