#136 Docker コンテナで使用している image を最新バージョンに上げました

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 HOST_IP_ADDRESS=192.168.3.4
-REDIS_VERSION=6.0.9
+REDIS_VERSION=6.2.1
 REDIS_CLUSTER_1_PORT=6379
 REDIS_CLUSTER_2_PORT=6380
 REDIS_CLUSTER_3_PORT=6381
@@ -7,16 +7,18 @@ REDIS_CLUSTER_4_PORT=6382
 REDIS_CLUSTER_5_PORT=6383
 REDIS_CLUSTER_6_PORT=6384
 
-RABBITMQ_VERSION=3.8.9-management
+RABBITMQ_VERSION=3.8.14-management
 RABBITMQ_ERLANG_COOKIE=Uzkm93w5e1Lz8AcP
 RABBITMQ_DEFAULT_USER=rabbitmq
 RABBITMQ_DEFAULT_PASS=12345678
 RABBITMQ_DEFAULT_VHOST=/
 
-POSTGRESQL_VERSION=12.5
-PGADMIN4_VERSION=4.29
+HAPROXY_VERSION=2.3.6
 
-FLYWAY_VERSION=7.3.1
+POSTGRESQL_VERSION=12.6
+PGADMIN4_VERSION=5.0
+
+FLYWAY_VERSION=7.5.4
 FLYWAY_URL=jdbc:postgresql://postgresql/ksbylending
 FLYWAY_USER=ksbylending_user
 FLYWAY_PASSWORD=xxxxxxxx
