--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   prometheus:
-    image: prom/prometheus:v2.23.0
+    image: prom/prometheus:v2.25.0
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -16,7 +16,7 @@ services:
       - "app:${HOST_IP_ADDRESS}"
 
   grafana:
-    image: grafana/grafana:7.3.6
+    image: grafana/grafana:7.4.3
     container_name: grafana
     ports:
       - "3000:3000"
@@ -194,7 +194,7 @@ services:
       - redis-cluster-6
 
   redis_exporter:
-    image: oliver006/redis_exporter:v1.14.0-alpine
+    image: oliver006/redis_exporter:v1.17.1-alpine
     container_name: redis_exporter
     ports:
       - "9121:9121"
@@ -282,7 +282,7 @@ services:
       - rabbitmq1
   # http://localhost:1936/haproxy?stats
   haproxy:
-    image: haproxy:2.3.2-alpine
+    image: haproxy:${HAPROXY_VERSION}-alpine
     container_name: haproxy
     ports:
       - "1936:1936"
