--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,10 @@ spring.datasource.hikari.register-mbeans=true
 spring.mail.host=localhost
 spring.mail.port=25
 
-spring.redis.cluster.nodes[0]=${host.ip.address}:6379
-spring.redis.cluster.nodes[1]=${host.ip.address}:6380
-spring.redis.cluster.nodes[2]=${host.ip.address}:6381
-spring.redis.cluster.nodes[3]=${host.ip.address}:6382
-spring.redis.cluster.nodes[4]=${host.ip.address}:6383
-spring.redis.cluster.nodes[5]=${host.ip.address}:6384
+spring.redis.client-name=ksbysample-webapp-lending
+spring.redis.cluster.nodes=${host.ip.address}:6379,${host.ip.address}:6380,${host.ip.address}:6381,${host.ip.address}:6382,${host.ip.address}:6383,${host.ip.address}:6384
+spring.redis.lettuce.cluster.refresh.period=5s
+spring.redis.timeout=30s
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
