--- a/build.gradle
+++ b/build.gradle
@@ -160,9 +160,7 @@ dependencies {
     implementation("org.apache.commons:commons-lang3")
     implementation("org.codehaus.janino:janino")
     implementation("io.micrometer:micrometer-registry-prometheus")
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
-    }
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
 
