domaGen タスクを実行したところ SQL ファイルを生成しない問題があることに気づいたので domaCodeGenDbSql タスクを追加して SQL ファイルが生成されるようにしました

--- a/build.gradle
+++ b/build.gradle
@@ -396,10 +396,11 @@ task afterDomaCodeGen {
         delete "${workPath}"
     }
 }
-// beforeDomaCodeGen --> domaCodeGenDbEntity --> domaCodeGenDbDao --> domaGen --> afterDomaCodeGen
+// beforeDomaCodeGen --> domaCodeGenDbEntity --> domaCodeGenDbDao --> domaCodeGenDbSql --> domaGen --> afterDomaCodeGen
 domaCodeGenDbEntity.dependsOn beforeDomaCodeGen
 domaCodeGenDbDao.dependsOn domaCodeGenDbEntity
-domaGen.dependsOn domaCodeGenDbDao
+domaCodeGenDbSql.dependsOn domaCodeGenDbDao
+domaGen.dependsOn domaCodeGenDbSql
 domaGen.finalizedBy afterDomaCodeGen
 
 task printClassWhatNotMakeTest {
