#137 Spock を 1.3-groovy-2.5 → 2.0-groovy-3.0 へバージョンアップしました

--- a/build.gradle
+++ b/build.gradle
@@ -129,19 +129,17 @@ dependencyManagement {
         mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES) {
             // Spring Boot の BOM に定義されているバージョンから変更する場合には、ここに以下のように記述する
             // bomProperty "thymeleaf.version", "3.0.9.RELEASE"
-            bomProperty "groovy.version", "2.5.12"
         }
         mavenBom("org.junit:junit-bom:5.7.2")
     }
 }
 
 dependencies {
-    def spockVersion = "1.3-groovy-2.5"
+    def spockVersion = "2.0-groovy-3.0"
     def jdbcDriver = "org.postgresql:postgresql:42.2.23"
     def domaVersion = "2.47.1"
     def lombokVersion = "1.18.20"
     def errorproneVersion = "2.5.1"
-    def powermockVersion = "2.0.9"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-dependency-versions.html ) 参照
@@ -167,6 +165,8 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
+    testImplementation("org.codehaus.groovy:groovy-sql")
+    testImplementation("org.mockito:mockito-inline")
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     runtimeOnly("${jdbcDriver}")
@@ -204,10 +204,6 @@ dependencies {
     // for Error Prone ( http://errorprone.info/ )
     errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
     compileOnly("com.google.errorprone:error_prone_annotations:${errorproneVersion}")
-
-    // PowerMock
-    testImplementation("org.powermock:powermock-module-junit4:${powermockVersion}")
-    testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for SpotBugs
     spotbugs(configurations.spotbugsPlugins.dependencies)
@@ -258,16 +254,6 @@ clean {
 }
 
 // -ea -Dspring.profiles.active=unittest -Dfile.encoding=UTF-8 -Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP -XX:TieredStopAtLevel=1 -Dspring.main.lazy-initialization=true --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
-task testJUnit4AndSpock(type: Test) {
-    jvmArgs = jvmArgsForTask +
-            jvmArgsAddOpens +
-            ["-Dspring.profiles.active=unittest"]
-
-    testLogging {
-        afterSuite printTestCount
-    }
-}
-test.dependsOn testJUnit4AndSpock
 test {
     jvmArgs = jvmArgsForTask +
             jvmArgsAddOpens +
