--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "groovy"
     id "checkstyle"
-    id "com.github.spotbugs" version "4.6.1"
+    id "com.github.spotbugs" version "4.7.3"
     id "pmd"
     id "net.ltgt.errorprone" version "2.0.2"
     id "com.gorylenko.gradle-git-properties" version "2.3.1"
@@ -99,12 +99,12 @@ spotbugs {
     toolVersion = "${spotbugs.toolVersion.get()}"
     ignoreFailures = true
     spotbugsTest.enabled = false
+    excludeFilter = file("${rootProject.projectDir}/config/spotbugs/exclude.xml")
 }
 spotbugsMain {
     reports {
         html {
             enabled = true
-            stylesheet = "color.xsl"
         }
     }
 }
