--- a/docker-compose.mail.yml
+++ b/docker-compose.mail.yml
@@ -55,5 +55,5 @@ services:
 
 networks:
   default:
-    external:
-      name: ksbysample-webapp-lending_default
+    name: ksbysample-webapp-lending_default
+    external: true
