docker/app/Dockerfile の jdk を eclipse-temurin:17_35-jdk-alpine へ変更し、docker-compose.app.yml 内の jar ファイルのバージョンを 2.5.5 に変更しました

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11:jdk-11.0.12_7-alpine-slim
+FROM eclipse-temurin:17_35-jdk-alpine
 
 RUN apk update && \
     apk upgrade; \
